# yapm

./: .gitignore  Cargo.toml  README.md
ressources/: day_style.css  night_style.css
src/: main.rs
src/app/: cli.rs  del_box.rs  get_box.rs  gui.rs  merge_box.rs  mod.rs  reorg_box.rs  result_window.rs  split_box.rs  widget_builder.rs
src/app/box_widget/: del_box.rs  get_box.rs  merge_box.rs  mod.rs  reorg_box.rs  split_box.rs
